--- a/HastaneRandevuSistemi.UI/HastaneRandevuSistemi.UI.csproj
+++ b/HastaneRandevuSistemi.UI/HastaneRandevuSistemi.UI.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
+  </ItemGroup>
+
 </Project>
